2005-10-27  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        Test cases for the new XSLTProcessor JS object.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=3275

        * fast/xsl/xslt-processer-expected.txt: Added.
        * fast/xsl/xslt-processer.html: Added.

2005-10-26  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs & darin.

        Test case updates for XML serialization fixes.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5404

        * fast/dom/dom-parse-serialize-display-expected.txt:
        * fast/innerHTML/004-expected.txt: Added.
        * fast/innerHTML/004.xhtml: Added.
        * fast/innerHTML/005-expected.txt: Added.
        * fast/innerHTML/005.html: Added.

2005-10-26  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        * dom/xhtml/level3/core/nodeisequalnode01-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode02-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode04-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode06-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode07-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode10-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode11-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode12-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode13-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode14-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode19-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode20-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode22-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode28-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode29-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode31-expected.txt:
        * dom/xhtml/level3/core/nodeisequalnode32-expected.txt:
        These now pass.
        
        * dom/xhtml/level3/core/nodeisequalnode21-expected.txt: